Refactor GroupService for better error handling
Refactor GroupService to use constants for error messages and improve code readability.